Catalog page with no menus

--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="desktop.css">
     <link rel="stylesheet" href="catalog.css">
+    <!-- Для вёрстки по картинке: вставить в конец head 
+    <link rel="stylesheet" href="test/test.css"> -->
 </head>
 
 <body>
@@ -47,20 +49,216 @@
         <nav class="filter-n-sort">
             <div class="filter-n-sort__filter">
                 FILTER
-                <img src="img/filter-icon.svg" alt="filter-icon" class="filter-icon">
+                <img src="img/filter-icon.svg" alt="filter" class="filter-img">
             </div>
             <div class="filter-n-sort__sort">
                 <div class="sort-btn">TRENDING NOW
-                    <img src="img/downbtn.svg" alt="downbtn" class="downbtn">
+                    <img src="img/down-arrow-icon.svg" alt="down-arrow" class="sort-details-arrow">
                 </div>
                 <div class="sort-btn">SIZE
-                    <img src="img/downbtn.svg" alt="downbtn" class="downbtn">
+                    <img src="img/down-arrow-icon.svg" alt="down-arrow" class="sort-details-arrow">
                 </div>
                 <div class="sort-btn">PRICE
-                    <img src="img/downbtn.svg" alt="downbtn" class="downbtn">
+                    <img src="img/down-arrow-icon.svg" alt="down-arrow" class="sort-details-arrow">
                 </div>
             </div>
         </nav>
+    </section>
+
+    <section class="growstopper">
+        <div class="featured-items">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic1.jpeg" alt="pic1" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic11.jpeg" alt="pic11" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic4.jpeg" alt="pic4" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic10.jpeg" alt="pic10" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic8.jpeg" alt="pic8" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic12.jpeg" alt="pic12" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic9.jpeg" alt="pic9" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic7.jpeg" alt="pic7" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="img/chart.svg" alt="chart">
+                        <p class="add-text">Add to Chart</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pagination">
+        <ul class="pagination-btns">
+            <li class="arrow">
+                <a href="#" class="pagination-link">
+                    <img src="img/catalog-left-arrow.svg" alt="" class="left-arrow">
+                </a>
+            </li>
+            <li class="page active-page"><a href="#" class="pagination-link">1</a></li>
+            <li class="page"><a href="#" class="pagination-link">2</a></li>
+            <li class="page"><a href="#" class="pagination-link">3</a></li>
+            <li class="page"><a href="#" class="pagination-link">4</a></li>
+            <li class="page"><a href="#" class="pagination-link">5</a></li>
+            <li class="page"><a href="#" class="pagination-link">6.....20</a></li>
+            <li class="arrow">
+                <a href="#" class="pagination-link">
+                    <img src="img/catalog-left-arrow.svg" alt="" class="right-arrow">
+                </a>
+            </li>
+        </ul>
     </section>
 
     <footer>
@@ -141,6 +339,9 @@
             </div>
         </div>
     </footer>
+
+    <!-- Для вёрстки по картинке: вставить в конец body 
+    <img src="test/catalog_1140.png" alt="" class="test-img"> -->
 </body>
 
 </html>
