--- a/index.html
+++ b/index.html
@@ -94,93 +94,117 @@
 
     <section class="growstopper">
         <div class="featured-items-header">
-            <div class="featured-items-header__header">Fetured Items</div>
-            <div class="featured-items-header__text">Shop for items based on what we featured in this week</div>
+            <h2 class="featured-items-header__header">Fetured Items</h2>
+            <p class="featured-items-header__text">Shop for items based on what we featured in this week</p>
         </div>
         <div class="featured-items">
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic1.jpeg" alt="pic1" class="card__pic">
-                    <a href="#" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic1.jpeg" alt="pic1" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic2.jpeg" alt="pic2" class="card__pic">
-                    <a href="#" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic2.jpeg" alt="pic2" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic3.jpeg" alt="pic3" class="card__pic">
-                    <a href="#" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic4.jpeg" alt="pic4" class="card__pic">
-                    <a href="#" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic4.jpeg" alt="pic4" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic5.jpeg" alt="pic5" class="card__pic">
-                    <a href="#" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic5.jpeg" alt="pic5" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
-            <div class="featured-items__card">
-                <div class="choose">
-                    <img src="img/pic6.jpeg" alt="pic6" class="card__pic">
-                    <a href="#2" class="add-to-cart">
+            <div class="card-block">
+                <a href="#" class="card">
+                    <img src="img/pic6.jpeg" alt="pic6" class="card-pic">
+                    <div class="text-box">
+                        <p class="card-header">ELLERY X M'O CAPSULE</p>
+                        <p class="card-text">
+                            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+                        </p>
+                        <p class="card-price">$52.00</p>
+                    </div>
+                </a>
+                <div class="add-box">
+                    <a href="#" class="add">
                         <img src="img/chart.svg" alt="chart">
-                        <div class="add-to-cart__text">Add to Cart</div>
+                        <p class="add-text">Add to Chart</p>
                     </a>
                 </div>
-                <div class="card-header">ELLERY X M'O CAPSULE</div>
-                <div class="card-text">
-                    Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-                </div>
-                <div class="card-price">$52.00</div>
             </div>
         </div>
         <div class="browse-button">
