Sketch of main menu

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,36 @@
                         <img src="img/mglass.svg " alt="mglass" class="mgpic">
                     </div>
                     <div class="rightpart">
-                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod">
+                        <div class="menu-block">
+                            <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod">
+                            <div class="menu">
+                                <h2 class="menu-main-header">menu</h2>
+                                <h3 class="menu-header">man</h3>
+                                <div class="submenu">
+                                    <a href="#" class="menu-elem">Accessories</a>
+                                    <a href="#" class="menu-elem">Bags</a>
+                                    <a href="#" class="menu-elem">Denim</a>
+                                    <a href="#" class="menu-elem">T-Shirts</a>
+                                </div>
+                                <h3 class="menu-header">woman</h3>
+                                <div class="submenu">
+                                    <a href="#" class="menu-elem">Accessories</a>
+                                    <a href="#" class="menu-elem">Jackets & Coats</a>
+                                    <a href="#" class="menu-elem">Polos</a>
+                                    <a href="#" class="menu-elem">T-Shirts</a>
+                                    <a href="#" class="menu-elem">Shirts</a>
+                                </div>
+                                <h3 class="menu-header">kids</h3>
+                                <div class="submenu">
+                                    <a href="#" class="menu-elem">Accessories</a>
+                                    <a href="#" class="menu-elem">Jackets & Coats</a>
+                                    <a href="#" class="menu-elem">Polos</a>
+                                    <a href="#" class="menu-elem">T-Shirts</a>
+                                    <a href="#" class="menu-elem">Shirts</a>
+                                    <a href="#" class="menu-elem">Bags</a>
+                                </div>
+                            </div>
+                        </div>
                         <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
                         <div class="chart">
                             <img src="img/chart.svg " alt="chart" class="no-phone no-phone_pic">
