--- a/cart.html
+++ b/cart.html
@@ -83,7 +83,7 @@
                             <p class="card-header">MANGO PEOPLE T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="number" name="product-count" id="product1-count" value="2">
+                                <input type="text" class="product-count" id="product1-count" value="2">
                             </p>
                         </div>
                         <div class="card-close">
@@ -96,7 +96,7 @@
                             <p class="card-header">MANGO PEOPLE T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="number" name="product-count" id="product1-count" value="2">
+                                <input type="text" class="product-count" id="product2-count" value="2">
                             </p>
                         </div>
                         <div class="card-close">
@@ -108,19 +108,19 @@
                         <a href="#" class="shopping-btn">CONTINUE SHOPPING</a>
                     </div>
                 </div>
-            </div>
-            <div class="countblock">
-                <div class="address-form">
-                    <h2 class="address-form-header">SHIPPING ADRESS</h2>
-                    <input type="text" name="country" id="address-form-country" placeholder="Bangladesh">
-                    <input type="text" name="state" id="address-form-state" placeholder="State">
-                    <input type="number" name="postcode" id="address-form-postcode" placeholder="Postcode / Zip">
-                    <a href="#" class="shopping-btn">GET A QUOTE</a>
-                </div>
-                <div class="calculator">
-                    <p class="subtotal">SUB TOTAL <span class="sum" id="sub-total">$900</span></p>
-                    <p class="total">GRAND TOTAL <span class="grandsum" id="grand-total">$900</span></p>
-                    <a href="#" class="main-btn">PROCEED TO CHECKOUT</a>
+                <div class="countblock">
+                    <div class="address-form">
+                        <h2 class="address-form-header">SHIPPING ADRESS</h2>
+                        <input type="text" class="address-input address-country" id="address-form-country" placeholder="Bangladesh">
+                        <input type="text" class="address-input" id="address-form-state" placeholder="State">
+                        <input type="number" class="address-input" id="address-form-postcode" placeholder="Postcode / Zip">
+                        <a href="#" class="quote-btn">GET A QUOTE</a>
+                    </div>
+                    <div class="calculator">
+                        <p class="subtotal">SUB TOTAL <span class="sum" id="sub-total">$900</span></p>
+                        <p class="total">GRAND TOTAL <span class="grandsum" id="grand-total">$900</span></p>
+                        <a href="#" class="main-btn">PROCEED TO CHECKOUT</a>
+                    </div>
                 </div>
             </div>
         </div>
