Fix chart/cart bug

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
                         <div class="chart">
-                            <img src="img/chart.svg " alt="chart" class="no-phone no-phone_pic">
+                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
                         </div>
                     </div>
@@ -140,8 +140,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -158,8 +158,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -176,8 +176,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -194,8 +194,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -212,8 +212,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -230,14 +230,14 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
         </div>
         <div class="browse-button">
-            <a href="#">
+            <a href="catalog.html">
                 <div class="browse-btn">Browse All Product</div>
             </a>
         </div>
