--- a/catalog.html
+++ b/catalog.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="desktop.css">
     <link rel="stylesheet" href="catalog.css">
-    <!-- Для вёрстки по картинке: вставить в конец head 
-    <link rel="stylesheet" href="test/test.css"> -->
 
     <svg width="15" height="10" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="filter-icon" viewBox="0 0 15 10">
@@ -65,7 +63,7 @@
                         </div>
                         <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
                         <div class="chart">
-                            <img src="img/chart.svg " alt="chart" class="no-phone no-phone_pic">
+                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
                         </div>
                     </div>
@@ -170,8 +168,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -189,8 +187,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -208,8 +206,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -227,8 +225,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -246,8 +244,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -265,8 +263,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -284,8 +282,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -303,8 +301,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -322,8 +320,8 @@
                 </a>
                 <div class="add-box">
                     <a href="#" class="add">
-                        <img src="img/chart.svg" alt="chart">
-                        <p class="add-text">Add to Chart</p>
+                        <img src="img/cart.svg" alt="chart">
+                        <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
@@ -429,9 +427,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Для вёрстки по картинке: вставить в конец body 
-    <img src="test/catalog_hover_1140.png" alt="" class="test-img"> -->
 </body>
 
 </html>
