--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,7 @@
                         </div>
                         <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
                         <div class="chart">
-                            <img src="img/chart.svg " alt="chart" class="no-phone no-phone_pic">
+                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
                         </div>
                     </div>
